Modificado navabar con bootstrap, hay que colocar el dropdow del perfil y poner el buscador con bootsrap

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,3 +45,13 @@ a{
 .collection-item{
   width: 100%;
 }
+
+.navbar-collapse{
+  margin-right:10%;
+}
+
+.dropdown-toggle{
+  height: 80% ;
+  
+}
+
